# Generated by Django 5.0.2 on 2024-02-16 18:22

import django.contrib.postgres.fields
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='AdditionalService',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=500)),
                ('icon', models.ImageField(blank=True, null=True, upload_to='')),
            ],
        ),
        migrations.CreateModel(
            name='FuelType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('icon', models.ImageField(blank=True, null=True, upload_to='')),
            ],
        ),
        migrations.CreateModel(
            name='FuelStation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('number', models.PositiveIntegerField()),
                ('coordinate_x', models.FloatField()),
                ('coordinate_y', models.FloatField()),
                ('address', models.TextField(null=True)),
                ('image_urls', django.contrib.postgres.fields.ArrayField(base_field=models.CharField(max_length=2000), blank=True, null=True, size=None)),
                ('services', models.ManyToManyField(blank=True, related_name='fuel_stations', to='core.additionalservice')),
            ],
        ),
        migrations.CreateModel(
            name='FuelPrice',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('price', models.FloatField()),
                ('currency', models.CharField(choices=[('RUB', 'RUB'), ('USD', 'USD'), ('EUR', 'EUR'), ('RSD', 'RSD')], max_length=10)),
                ('fuel_station', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.fuelstation')),
                ('fuel_type', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='core.fueltype')),
            ],
            options={
                'unique_together': {('fuel_type', 'fuel_station')},
            },
        ),
    ]
